--- a/index.html
+++ b/index.html
@@ -20,55 +20,94 @@
     <div class="hero">
       <div class="hero-info">
         <img class="logo" src="assets/habit-logo.png" alt="Habit logo">
+        <a class="button">Download App</a>
         <h4>Trying to be more mindful about screen time?</h4>
         <h5>Habit effortlessly tracks app spending and use.</h5>
-        <a class="button">Download App</a>
+        <a class="mobile-button">Download App</a>
         <img id="mobile-hero-phone-img" src="assets/phone-overview.png" alt="Habit app overview screen">
+      </div>
+      <div id="hero-graph">
+        <img src="assets/hero-graph.png">
       </div>
     </div>
     <div class="stats-section">
-      <div class="circle" id="screen-time-circle"></div>
-      <div class="circle-text">
-        <h4 id="screen-time">Screen Time</h4>
-        <p>Set goals and be mindful of your phone use.</p>
+      <div class="one-third">
+        <div class="circle" id="screen-time-circle">
+          <h4 class="stat">1.5</h4>
+          <p class="stat-description">hrs</p>
+        </div>
+        <div class="circle-text">
+          <h4 id="screen-time">Screen Time</h4>
+          <p>Set goals and be mindful of your phone use.</p>
+        </div>
       </div>
-      <div class="circle" id="app-opens-circle"></div>
-      <div class="circle-text">
-        <h4 id="app-opens">App Opens</h4>
-        <p>See which apps you use the most.</p>
+      <div class="one-third">
+        <div class="circle" id="app-opens-circle">
+          <h4 class="stat">4</h4>
+          <p class="stat-description">opens</p>
+        </div>
+        <div class="circle-text">
+          <h4 id="app-opens">App Opens</h4>
+          <p>See which apps you use the most.</p>
+        </div>
       </div>
-      <div class="circle" id="app-spending-circle"></div>
-      <div class="circle-text">
-        <h4 id="app-spending">App Spending</h4>
-        <p>Track spending on delivery, rideshares, etc.</p>
+      <div class="one-third">
+        <div class="circle" id="app-spending-circle">
+          <h4 class="stat">$8</h4>
+          <p class="stat-description">spent</p>
+        </div>
+        <div class="circle-text">
+          <h4 id="app-spending">App Spending</h4>
+          <p>Track spending on delivery, rideshares, etc.</p>
+        </div>
       </div>
       <div>
         <a class="button">Download App</a>
+      </div>
+      <div>
+        <a class="mobile-button">Download App</a>
       </div>
     </div>
     <div class="goals-section">
-      <h4>Set daily, weekly, and monthly goals.</h4>
-      <p>Choose to receive alerts  about your progress. Get notified when you’re on track or nearing your limit.</p>
-      <img id="mobile-alerts-phone-img" src="assets/phone-alerts.png" alt="Habit app alerts screen">
-      <div>
-        <a class="button">Download App</a>
+      <div class="goals-info">
+        <div class="one-half">
+          <h4>Set daily, weekly, and monthly goals.</h4>
+          <p>Choose to receive alerts  about your progress. Get notified when you’re on track or nearing your limit.</p>
+          <div>
+            <a class="button">Download App</a>
+          </div>
+        </div>
+        <div class="one-half">
+          <div>
+            <img id="mobile-alerts-phone-img" src="assets/phone-alerts.png" alt="Habit app alerts screen">
+          </div>
+        </div>
+        <div>
+          <a class="mobile-button">Download App</a>
+        </div>
       </div>
-      <img id="goals-graph" src="assets/goals-graph.png">
+      <div id="goals-graph">
+        <img src="assets/goals-graph.png">
+      </div>
     </div>
     <div class="testimonials-section">
-      <img id="testimonial-photo" src="assets/testimonial-photo.png" alt="User review photo">
-      <img id="testimonial-arrow" src="assets/testimonials-arrow.png" alt="Arrow to next testimonial">
-      <div>
-        <img id="five-star-rating" src="assets/five-stars.png" alt="five star rating">
+      <div class="testimonials-info-div">
+        <img id="testimonial-photo" src="assets/testimonial-photo.png" alt="User review photo">
+        <div>
+          <img id="five-star-rating" src="assets/five-stars.png" alt="five star rating">
+        </div>
+        <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
       </div>
-      <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
+      <div class="testimonials-arrow-div">
+        <img id="testimonial-arrow" src="assets/testimonials-arrow.png" alt="Arrow to next testimonial">
+      </div>
     </div>
     <div class="footer">
       <div class="footer-info">
-        <h4>About</h4>
+        <h4 id="footer-text">About</h4>
         <h4>FAQ</h4>
         <h4>Download App</h4>
-        <h4>Email us</h4>
+        <h4>Email Us</h4>
       </div>
       <div>
         <img id="footer-logo" src="assets/Habit-logo-white.png" alt="Habit copyright 2017">
