final responsive updates

--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
 
   </head>
   <body>
     <header>
 
     </header>
-    <div class="hero">
+    <div class="hero animated fadeIn">
       <div class="hero-info">
         <img class="logo" src="assets/habit-logo.png" alt="Habit logo">
         <a class="button">Download App</a>
         <h4>Trying to be more mindful about screen time?</h4>
         <h5>Habit effortlessly tracks app spending and use.</h5>
         <a class="mobile-button">Download App</a>
-        <img id="mobile-hero-phone-img" src="assets/phone-overview.png" alt="Habit app overview screen">
+        <img class="animated fadeInUp" id="mobile-hero-phone-img" src="assets/phone-overview.png" alt="Habit app overview screen">
       </div>
       <div id="hero-graph">
-        <img src="assets/hero-graph.png">
+        <img id="graph-image" src="assets/hero-graph.png">
       </div>
     </div>
     <div class="stats-section">
@@ -91,6 +92,9 @@
       </div>
     </div>
     <div class="testimonials-section">
+      <div class="testimonials-arrow-div-left">
+        <img id="testimonial-arrow-left" src="assets/testimonials-arrow-left.png" alt="Arrow to previous testimonial">
+      </div>
       <div class="testimonials-info-div">
         <img id="testimonial-photo" src="assets/testimonial-photo.png" alt="User review photo">
         <div>
@@ -98,7 +102,7 @@
         </div>
         <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
       </div>
-      <div class="testimonials-arrow-div">
+      <div class="testimonials-arrow-div-right">
         <img id="testimonial-arrow" src="assets/testimonials-arrow.png" alt="Arrow to next testimonial">
       </div>
     </div>
