--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css">
 
   </head>
   <body>
@@ -92,19 +93,23 @@
       </div>
     </div>
     <div class="testimonials-section">
-      <div class="testimonials-arrow-div-left">
-        <img id="testimonial-arrow-left" src="assets/testimonials-arrow-left.png" alt="Arrow to previous testimonial">
-      </div>
       <div class="testimonials-info-div">
-        <img id="testimonial-photo" src="assets/testimonial-photo.png" alt="User review photo">
         <div>
-          <img id="five-star-rating" src="assets/five-stars.png" alt="five star rating">
+          <img id="testimonial-photo" src="assets/testimonial-photo.png" alt="User review photo">
+          <div>
+            <img id="five-star-rating" src="assets/five-stars.png" alt="five star rating">
+          </div>
+          <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
         </div>
-        <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
+        <div>
+          <img id="testimonial-photo" src="assets/testimonial-photo.png" alt="User review photo">
+          <div>
+            <img id="five-star-rating" src="assets/five-stars.png" alt="five star rating">
+          </div>
+          <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
+        </div>
       </div>
-      <div class="testimonials-arrow-div-right">
-        <img id="testimonial-arrow" src="assets/testimonials-arrow.png" alt="Arrow to next testimonial">
-      </div>
+
     </div>
     <div class="footer">
       <div class="footer-info">
@@ -117,5 +122,21 @@
         <img id="footer-logo" src="assets/Habit-logo-white.png" alt="Habit copyright 2017">
       </div>
     </div>
+
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('.testimonials-info-div').slick({
+        arrows: true
+      });
+    });
+
+
+  </script>
+
   </body>
-</html>
+  </html>
