--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <div class="hero animated fadeIn">
       <div class="hero-info">
-        <img class="logo" src="assets/habit-logo.png" alt="Habit logo">
+        <img class="logo" src="assets/Habit-logo.png" alt="Habit logo">
         <a class="button">Download App</a>
         <h4>Trying to be more mindful about screen time?</h4>
         <h5>Habit effortlessly tracks app spending and use.</h5>
