--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     </header>
     <div class="hero animated fadeIn">
       <div class="hero-info">
-        <img class="logo" src="assets/Habit-logo.png" alt="Habit logo">
+        <img class="logo" src="Assets/Habit-logo.png" alt="Habit logo">
         <a class="button">Download App</a>
         <h4>Trying to be more mindful about screen time?</h4>
         <h5>Habit effortlessly tracks app spending and use.</h5>
         <a class="mobile-button">Download App</a>
-        <img class="animated fadeInUp" id="mobile-hero-phone-img" src="assets/phone-overview.png" alt="Habit app overview screen">
+        <img class="animated fadeInUp" id="mobile-hero-phone-img" src="Assets/phone-overview.png" alt="Habit app overview screen">
       </div>
       <div id="hero-graph">
-        <img id="graph-image" src="assets/hero-graph.png">
+        <img id="graph-image" src="Assets/hero-graph.png">
       </div>
     </div>
     <div class="stats-section">
@@ -81,7 +81,7 @@
         </div>
         <div class="one-half">
           <div>
-            <img id="mobile-alerts-phone-img" src="assets/phone-alerts.png" alt="Habit app alerts screen">
+            <img id="mobile-alerts-phone-img" src="Assets/phone-alerts.png" alt="Habit app alerts screen">
           </div>
         </div>
         <div>
@@ -89,22 +89,22 @@
         </div>
       </div>
       <div id="goals-graph">
-        <img src="assets/goals-graph.png">
+        <img src="Assets/goals-graph.png">
       </div>
     </div>
     <div class="testimonials-section">
       <div class="testimonials-info-div">
         <div>
-          <img id="testimonial-photo" src="assets/testimonial-photo.png" alt="User review photo">
+          <img id="testimonial-photo" src="Assets/testimonial-photo.png" alt="User review photo">
           <div>
-            <img id="five-star-rating" src="assets/five-stars.png" alt="five star rating">
+            <img id="five-star-rating" src="Assets/five-stars.png" alt="five star rating">
           </div>
           <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
         </div>
         <div>
-          <img id="testimonial-photo" src="assets/testimonial-photo.png" alt="User review photo">
+          <img id="testimonial-photo" src="Assets/testimonial-photo.png" alt="User review photo">
           <div>
-            <img id="five-star-rating" src="assets/five-stars.png" alt="five star rating">
+            <img id="five-star-rating" src="Assets/five-stars.png" alt="five star rating">
           </div>
           <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
         </div>
@@ -119,7 +119,7 @@
         <h4>Email Us</h4>
       </div>
       <div>
-        <img id="footer-logo" src="assets/Habit-logo-white.png" alt="Habit copyright 2017">
+        <img id="footer-logo" src="Assets/Habit-logo-white.png" alt="Habit copyright 2017">
       </div>
     </div>
 
