work on Slick styling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
 
   </head>
   <body>
@@ -108,8 +109,21 @@
           </div>
           <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
         </div>
+        <div>
+          <img id="testimonial-photo" src="Assets/testimonial-photo.png" alt="User review photo">
+          <div>
+            <img id="five-star-rating" src="Assets/five-stars.png" alt="five star rating">
+          </div>
+          <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
+        </div>
+        <div>
+          <img id="testimonial-photo" src="Assets/testimonial-photo.png" alt="User review photo">
+          <div>
+            <img id="five-star-rating" src="Assets/five-stars.png" alt="five star rating">
+          </div>
+          <p>“Using Habit helped me be more aware of how much time I’m spending on my phone and to not pick it up so often throughout the day. Highly recommend!”</p>
+        </div>
       </div>
-
     </div>
     <div class="footer">
       <div class="footer-info">
@@ -134,8 +148,6 @@
         arrows: true
       });
     });
-
-
   </script>
 
   </body>
